Fixed broken CSS

--- a/CustomBaseEncoding/wwwroot/css/app.css
+++ b/CustomBaseEncoding/wwwroot/css/app.css
@@ -66,8 +66,8 @@ main {
     }
 
 .root-container {
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
@@ -77,7 +77,16 @@ main {
         display: grid;
     }
 
+    .root-container > .left.pane {
+        grid-template-rows: auto 1fr;
+    }
+
     .root-container > div > textarea {
+        font-size: 14pt;
+        margin: 8px;
+    }
+
+    .root-container > .left.pane > .toolbar {
         font-size: 14pt;
         margin: 8px;
     }
